@@ -1,5 +1,7 @@
 Version 3.7
 
+* BUGFIX: Fixed HMAC for hash functions with other than 512 bit internal block size.
+
 2016-01-26 release(3.7.1037)
 * BUGFIX: Fixed building from SRPM
   Thanks to Peter Portante
